# clickhouse.build

./: .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHAT_UI_README.md  CONTRIBUTING.md  README.md  clickpipe.py  clone_test_oss_repos.sh  config.template.yaml  generate_metrics_report.py  main.py  parse_event_metrics.py  planner.py  pyproject.toml  run_code_migrator.py  run_data_migrator.py  run_planner.py  run_scanner.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
eval/: README.md  eval.py  eval_results.json  ground_truth.json
eval/code_migrator/: eval.py  ground_truth.json
eval/data_migrator/: eval.py  ground_truth.json
eval/data_migrator/fixtures/: pg-expense-direct.json  pg-expense-drizzleorm.json  pg-expense-prisma.json
eval/planner/: eval.py  ground_truth.json
eval/qa_code_migrator/: eval.py  ground_truth.json
eval/scanner/: eval.py  ground_truth.json
eval_repos/pg-expense-direct/: package-lock.json  package.json
eval_repos/pg-expense-drizzleorm/: README.md  docker-compose.yml  drizzle.config.ts  package-lock.json  package.json
eval_repos/pg-expense-drizzleorm/drizzle/: 0000_worried_boom_boom.sql
eval_repos/pg-expense-prisma/: .env.example  README.md  docker-compose.yml  package-lock.json  package.json
pg-expense-example/scripts/: seed-database.js
samples/: agents-as-tools-interleaved.ipynb  prompts.py
src/: agents.py  cli.py  data_migrator_agent.py  local_tools.py  logging_config.py  models.py  models_config.py  orchestrator.py  prompts.py  tools.py  utils.py
src/agents/: code_migrator.py  data_migrator.py  planner.py  qa_code_migrator.py  scanner.py
src/chat_ui/: __init__.py  app.py  approval_integration.py
src/corpus/: orm_drizzleorm.txt  orm_none.txt  orm_prismaorm.txt
src/prompts/: code_migrator.py  common.py  data_migrator.py  planner.py  qa_code_migrator.py  scanner.py
src/tools/: code_migrator.py  common.py  data_migrator.py  planner.py
src/tui/: __init__.py  callbacks.py  display.py  logo.py
src/utils/: __init__.py  langfuse.py
test/pg-expense-drizzleorm/: package.json
test/pg-expense-prisma/: .env
(+137 files in other folders)
