[project]
name = "clickhouse-build"
version = "0.1.0"
description = "PostgreSQL to ClickHouse Migration Tool with AI-powered query conversion"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "strands-agents>=1.8.0",
    "strands-agents-tools>=0.2.7",
    "mcp",
    "notebook",
    "semver>=3.0.4",
    "pyyaml",
    "rich>=13.0.0",
    "textual>=6.1.0",
]

[project.scripts]
clickhouse-build = "main:main"
