[project]
name = "clickhouse-build"
version = "1.0.0"
description = "PostgreSQL to ClickHouse Migration Tool with AI-powered query conversion"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "strands-agents>=1.8.0",
    "strands-agents-tools>=0.2.7",
    "mcp",
    "notebook",
    "semver>=3.0.4",
    "pyyaml",
    "click>=8.2.1",
    "questionary>=2.1.1",
    "rich>=14.1.0",
    "textual>=6.1.0",
]

[project.scripts]
clickhouse-build = "main:main"
