[project]
name = "clickhouse-build"
version = "0.1.0"
description = "PostgreSQL to ClickHouse Migration Tool with AI-powered query conversion"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "strands-agents>=1.18.0",
    "strands-agents-tools>=0.2.16",
    "mcp",
    "notebook",
    "semver>=3.0.4",
    "pyyaml",
    "rich>=14.1.0",
    "textual>=6.1.0",
    "langfuse>=3.6.2",
    "python-dotenv>=1.0.0",
    "colorlog>=6.9.0",
    "click>=8.2.1",
    "rich-click>=1.9.3",
]

[project.scripts]
clickhouse-build = "main:main"

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = false
check_untyped_defs = false
allow_untyped_globals = true
allow_untyped_calls = true
allow_untyped_defs = true
disable_error_code = ["var-annotated", "arg-type", "return-value", "assignment", "union-attr", "attr-defined", "annotation-unchecked"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
